Add /builds page
Displays latest builds for SpeckleRhino by pulling data from the
AppVeyor API.

--- a/themes/speckleworks/static/css/main.css
+++ b/themes/speckleworks/static/css/main.css
@@ -592,6 +592,10 @@ pre {
   font-family: monospace !important;
 }
 
+pre a {
+  font-family: monospace;
+}
+
 code {
   box-sizing: border-box;
   padding: 3px;
