--- a/themes/speckleworks/layouts/partials/footer.html
+++ b/themes/speckleworks/layouts/partials/footer.html
@@ -18,7 +18,7 @@
       <br>
       <br>
       <br>
-      <p class="paragraph"><small>© 2015 - 2018 <a href="http://dimitrie.org">Dimitrie Stefanescu</a>, <a href="https://www.ucl.ac.uk/bartlett/" class="href">UCL The Bartlett</a>, <a href="http://innochain.net/">InnoChain</a> & Project Contributors. <a href='http://twitter.com/idid'>i did</a> this.</small></p> 
+      <p class="paragraph"><small>Started off by <a href="http://twitter.com/idid">Dimitrie Stefanescu</a> in 2015 while at <a href="https://www.ucl.ac.uk/bartlett/" class="href">UCL The Bartlett</a> & <a href="http://innochain.net/">InnoChain</a>. All work (c) project contributors, licensed under MIT.</small></p> 
       </div>
       <br>
       <br>
